--- a/index.src.html
+++ b/index.src.html
@@ -162,6 +162,24 @@ Definitions {#definitions}
 :: An image track that is marked by the given image file as being the default
     track. The mechanism for indicating a primary track is format defined.
 
+: <dfn>RGB Format</dfn>
+:: A {{PixelFormat}} containing red, green, and blue color channels in
+    any order or layout (interleaved or planar), and irrespective of whether an
+    alpha channel is present.
+
+: <dfn>sRGB Color Space</dfn>
+:: A {{VideoColorSpaceInit}} containing «[
+    "primaries" → {{VideoColorPrimaries/bt709}},
+    "transfer" → {{VideoTransferCharacteristics/iec61966-2-1}},
+    "matrix" → {{VideoMatrixCoefficients/rgb}},
+    "fullRange" → `true`]».
+
+: <dfn>REC709 Color Space</dfn>
+:: A {{VideoColorSpaceInit}} containing «[
+    "primaries" → {{VideoColorPrimaries/bt709}},
+    "transfer" → {{VideoTransferCharacteristics/bt709}},
+    "matrix" → {{VideoMatrixCoefficients/bt709}},
+    "fullRange" → `false`]».
 
 <dfn>Codec Processing Model</dfn> {#codec-processing-model-section}
 ===================================================================
@@ -734,10 +752,24 @@ Algorithms {#videodecoder-algorithms}
             {{VideoDecoderConfig/displayAspectHeight}} [=map/exist=] in the
             {{VideoDecoder/[[active decoder config]]}}, assign their values to
             |displayAspectWidth| and |displayAspectHeight| respectively.
-        4. Let |frame| be the result of running the [=Create a VideoFrame=]
-            algorithm with |output|, |timestamp|, |duration|, |displayAspectWidth|
-            and |displayAspectHeight|.
-        5. Invoke {{VideoDecoder/[[output callback]]}} with |frame|.
+        4. Let |colorSpace| be the {{VideoColorSpace}} for |output| as detected
+            by the codec implementation. If no {{VideoColorSpace}} is detected,
+            let |colorSpace| be `undefined`.
+
+            NOTE: The codec implementation may detect a {{VideoColorSpace}} by
+                analyzing the bitstream. Detection is not required and may not
+                always be feasible. The exact method of detection is implementer
+                defined and codec-specific. Authors may override the
+                detected {{VideoColorSpace}} by providing a
+                {{VideoDecoderConfig/colorSpace}} in the {{VideoDecoderConfig}}.
+
+        5. If {{VideoDecoderConfig/colorSpace}} [=map/exists=] in the
+            {{VideoDecoder/[[active decoder config]]}}, assign its value to
+            |colorSpace|.
+        6. Let |frame| be the result of running the [=Create a VideoFrame=]
+            algorithm with |output|, |timestamp|, |duration|,
+            |displayAspectWidth|, |displayAspectHeight|, and |colorSpace|.
+        7. Invoke {{VideoDecoder/[[output callback]]}} with |frame|.
   </dd>
   <dt><dfn>Reset VideoDecoder</dfn> (with |exception|)</dt>
   <dd>
@@ -1130,6 +1162,8 @@ Internal Slots {#videoencoder-internal-slots}
   The {{VideoDecoderConfig}} that describes how to decode the most recently
   emitted {{EncodedVideoChunk}}.
 </dd>
+<dt><dfn attribute for=VideoEncoder>[[active color space]]</dfn></dt>
+<dd>The {{VideoColorSpace}}</dd> that is actively applied for encoding.
 <dt><dfn attribute for=VideoEncoder>\[[state]]</dfn></dt>
 <dd>
   The current {{CodecState}} of this {{VideoEncoder}}.
@@ -1201,6 +1235,9 @@ Methods {#videoencoder-methods}
     3. Otherwise, run the <a>Close VideoEncoder</a> algorithm with
         {{NotSupportedError}} and abort these steps.
     4. Assign |config| to {{VideoEncoder/[[active encoder config]]}}.
+    5. If {{VideoEncoderConfig/colorSpace}} [=map/exists=] in |config|, assign
+        its value to {{VideoEncoder/[[active color space]]}}. Otherwise, assign
+        `null` to {{VideoEncoder/[[active color space]]}}.
   </dd>
 
   <dt><dfn method for=VideoEncoder>encode(|frame|, |options|)</dfn></dt>
@@ -1218,6 +1255,10 @@ Methods {#videoencoder-methods}
     5. [=Queue a control message=] to encode |frameClone|.
 
     [=Running a control message=] to encode the frame means performing these steps.
+    1. If {{VideoEncoder/[[active color space]]}} is `null`:
+        1. If |frame|.{{VideoFrame/colorSpace}} is not `null`, assign its value
+            to {{VideoEncoder/[[active color space]]}}.
+        2. ISSUE: what here? 709? Can we trust that frame.colorSpace is not null?
     1. Attempt to use {{VideoEncoder/[[codec implementation]]}} to encode
         |frameClone| according to |options|.
     2. If encoding results in an error, queue a task on the [=control thread=]
@@ -1342,7 +1383,9 @@ Algorithms {#videoencoder-algorithms}
                 `outputConfig.displayWidth`.
             5. Assign `encoderConfig.displayHeight` to
                 `outputConfig.displayHeight`.
-            6. Assign the remaining keys of `outputConfig` as determined by
+            6. Assign {{VideoEncoder/[[active color space]]}} to
+                `outputConfig.colorSpace`.
+            7. Assign the remaining keys of `outputConfig` as determined by
                 {{VideoEncoder/[[codec implementation]]}}. The User Agent
                 must ensure that the configuration is completely described
                 such that |outputConfig| could be used to correctly decode
@@ -1631,8 +1674,6 @@ dictionary VideoDecoderConfig {
   [EnforceRange] unsigned long displayAspectWidth;
   [EnforceRange] unsigned long displayAspectHeight;
   HardwareAcceleration hardwareAcceleration = "allow";
-
-  // Hint about the color space of the content.
   VideoColorSpaceInit colorSpace;
 };
 </xmp>
@@ -1702,6 +1743,14 @@ Note: {{VideoFrame/displayWidth}} and {{VideoFrame/displayHeight}} can both be
     Configures hardware acceleration for this codec. See
     {{HardwareAcceleration}}.
   </dd>
+
+  <dt><dfn dict-member for=VideoDecoderConfig>colorSpace</dfn></dt>
+  <dd>
+    Configures the {{VideoFrame}}.{{VideoFrame/colorSpace}} for {{VideoFrame}}s
+    associated with this {{VideoDecoderConfig}}. If
+    {{VideoDecoderConfig/colorSpace}} [=map/exists=], the provided values will
+    override any in-band values from the bitsream.
+  </dd>
 </dl>
 
 
@@ -1758,8 +1807,6 @@ dictionary VideoEncoderConfig {
   DOMString scalabilityMode;
   BitrateMode bitrateMode = "variable";
   LatencyMode latencyMode = "quality";
-
-  // Color space for metadata (in-band or output VideoDecoderConfig).
   VideoColorSpaceInit colorSpace;
 };
 </xmp>
@@ -1872,6 +1919,15 @@ To check if a {{VideoEncoderConfig}} is a <dfn>valid VideoEncoderConfig</dfn>,
   <dt><dfn dict-member for=VideoEncoderConfig>latencyMode</dfn></dt>
   <dd>
     Configures latency related behaviors for this codec. See {{LatencyMode}}.
+  </dd>
+
+  <dt><dfn dict-member for=VideoEncoderConfig>colorSpace</dfn></dt>
+  <dd>
+    Configures the {{VideoColorSpace}} to be used in the output
+    {{VideoDecoderConfig}}. May also be used to set in-band color information
+    while encoding. If not provided, the codec will attempt to use the
+    {{VideoFrame}}.{{VideoFrame/colorSpace}} for the first frame passed to
+    {{VideoEncoder/encode()}} following this {{VideoEncoderConfig}}.
   </dd>
 </dl>
 
@@ -2774,8 +2830,6 @@ interface VideoFrame {
   readonly attribute unsigned long displayHeight;
   readonly attribute unsigned long long? duration;  // microseconds
   readonly attribute long long? timestamp;          // microseconds
-
-  // Color space of the data produced by copyTo().
   readonly attribute VideoColorSpace? colorSpace;
 
   unsigned long allocationSize(
@@ -2810,7 +2864,6 @@ dictionary VideoFrameBufferInit {
   [EnforceRange] unsigned long displayWidth;
   [EnforceRange] unsigned long displayHeight;
 
-  // Defaults to Rec709 or SRGB for planar and interleaved formats respectively.
   VideoColorSpaceInit colorSpace;
 };
 </xmp>
@@ -2863,6 +2916,9 @@ dictionary VideoFrameBufferInit {
 : <dfn attribute for=VideoFrame>\[[timestamp]]</dfn>
 ::  The presentation timestamp, given in microseconds. The timestamp is copied
     from the {{EncodedVideoChunk}} corresponding to this {{VideoFrame}}.
+
+: <dfn attribute for=VideoFrame>[[color space]]</dfn>
+:: The {{VideoColorSpace}} associated with this frame.
 
 ### Constructors ###{#videoframe-constructors}
 
@@ -3004,6 +3060,12 @@ dictionary VideoFrameBufferInit {
     6. Assign |init|'s {{VideoFrameBufferInit/timestamp}} and
         {{VideoFrameBufferInit/duration}} to {{VideoFrame/[[timestamp]]}} and
         {{VideoFrame/[[duration]]}} respectively.
+    7. Let |colorSpace| be `undefined`.
+    8. If {{VideoFrameBufferInit/colorSpace}} [=map/exists=], assign its value
+        to |colorSpace|.
+    9. Assign the result of running the [=VideoFrame/Pick Color Space=]
+        algorithm, with |colorSpace| and {{VideoFrame/[[format]]}}, to
+        {{VideoFrame/[[color space]]}}.
 17. Return |frame|.
 
 ### Attributes ###{#videoframe-attributes}
@@ -3087,6 +3149,12 @@ dictionary VideoFrameBufferInit {
 
     The {{VideoFrame/duration}} getter steps are to return
     {{VideoFrame/[[duration]]}}.
+
+: <dfn attribute for=VideoFrame>colorSpace</dfn>
+:: The {{VideoColorSpace}} associated with this frame.
+
+    The {{VideoFrame/colorSpace}} getter steps are to return
+    {{VideoFrame/[[color space]]}}.
 
 ### Internal Structures ###{#videoframe-internal-structures}
 A <dfn>combined buffer layout</dfn> is a [=struct=] that consists of:
@@ -3195,40 +3263,56 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     When invoked, run the [=Close VideoFrame=] algorithm with [=this=].
 
 ### Algorithms ###{#videoframe-algorithms}
-  <dfn>Create a VideoFrame</dfn> (with |output|, |timestamp|, |duration|, |displayAspectWidth|, and |displayAspectHeight|)
-  1. Let |frame| be a new {{VideoFrame}}, constructed as follows:
-      1. Assign `false` to {{platform object/[[Detached]]}}.
-      2. Let |resource| be the [=media resource=] described by |output|.
-      3. Let |resourceReference| be a reference to |resource|.
-      4. Assign |resourceReference| to {{VideoFrame/[[resource reference]]}}.
-      5. If |output| uses a recognized {{VideoPixelFormat}}, assign that format to
-          {{VideoFrame/[[format]]}}. Otherwise, assign `null` to
-          {{VideoFrame/[[format]]}}.
-      6. Let |codedWidth| and |codedHeight| be the coded width and height of the
-          |output| in pixels.
-      8. Let |visibleLeft|, |visibleTop|, |visibleWidth|, and |visibleHeight| be
-          the left, top, width and height for the visible rectangle of |output|.
-      7. Let |displayWidth| and |displayHeight| be the the display size of
-          |output| in pixels.
-      8. If |displayAspectWidth| and |displayAspectHeight| are provided,
-          increase |displayWidth| or |displayHeight| until the ratio of
-          |displayWidth| to |displayHeight| matches the ratio of
-          |displayAspectWidth| to |displayAspectHeight|.
-      9. Assign |codedWidth|, |codedHeight|, |visibleLeft|, |visibleTop|,
-          |visibleWidth|, |visibleHeight|, |displayWidth|, and
-          |displayHeight| to {{VideoFrame/[[coded width]]}},
-          {{VideoFrame/[[coded height]]}}, {{VideoFrame/[[visible left]]}},
-          {{VideoFrame/[[visible top]]}}, {{VideoFrame/[[visible width]]}},
-          and {{VideoFrame/[[visible height]]}} respectively.
-      10. Assign |duration| and |timestamp| to {{VideoFrame/[[duration]]}} and
-          {{VideoFrame/[[timestamp]]}} respectively.
-  2. Return |frame|.
+: <dfn>Create a VideoFrame</dfn> (with |output|, |timestamp|, |duration|, |displayAspectWidth|, |displayAspectHeight|, and |colorSpace|)
+:: 1. Let |frame| be a new {{VideoFrame}}, constructed as follows:
+        1. Assign `false` to {{platform object/[[Detached]]}}.
+        2. Let |resource| be the [=media resource=] described by |output|.
+        3. Let |resourceReference| be a reference to |resource|.
+        4. Assign |resourceReference| to {{VideoFrame/[[resource reference]]}}.
+        5. If |output| uses a recognized {{VideoPixelFormat}}, assign that format to
+            {{VideoFrame/[[format]]}}. Otherwise, assign `null` to
+            {{VideoFrame/[[format]]}}.
+        6. Let |codedWidth| and |codedHeight| be the coded width and height of the
+            |output| in pixels.
+        8. Let |visibleLeft|, |visibleTop|, |visibleWidth|, and |visibleHeight| be
+            the left, top, width and height for the visible rectangle of |output|.
+        7. Let |displayWidth| and |displayHeight| be the the display size of
+            |output| in pixels.
+        8. If |displayAspectWidth| and |displayAspectHeight| are provided,
+            increase |displayWidth| or |displayHeight| until the ratio of
+            |displayWidth| to |displayHeight| matches the ratio of
+            |displayAspectWidth| to |displayAspectHeight|.
+        9. Assign |codedWidth|, |codedHeight|, |visibleLeft|, |visibleTop|,
+            |visibleWidth|, |visibleHeight|, |displayWidth|, and
+            |displayHeight| to {{VideoFrame/[[coded width]]}},
+            {{VideoFrame/[[coded height]]}}, {{VideoFrame/[[visible left]]}},
+            {{VideoFrame/[[visible top]]}}, {{VideoFrame/[[visible width]]}},
+            and {{VideoFrame/[[visible height]]}} respectively.
+        10. Assign |duration| and |timestamp| to {{VideoFrame/[[duration]]}} and
+            {{VideoFrame/[[timestamp]]}} respectively.
+        11. Assign {{VideoFrame/[[color space]]}} with the result of running the
+            [=VideoFrame/Pick Color Space=] algorithm, with |colorSpace| and
+            {{VideoFrame/[[format]]}}.
+    2. Return |frame|.
+
+
+: <dfn for=VideoFrame>Pick Color Space</dfn> (with |overrideColorSpace| and |format|)
+:: 1. If |overrideColorSpace| is provided, return a new {{VideoColorSpace}}
+        constructed with |overrideColorSpace|.
+
+        NOTE: User Agents may replace `null` members of the provided
+            |overrideColorSpace| with  guessed values as determined by
+            implementer defined hueristics.
+
+    2. Otherwise, if {{VideoFrame/[[format]]}} is an [=RGB format=] return a new
+        instance of the [=sRGB Color Space=]
+    3. Otherwise, return a new instance of the [=REC709 Color Space=].
 
 : To check if a {{VideoFrameBufferInit}} is a
     <dfn>valid VideoFrameBufferInit</dfn>, run these steps:
 :: 1. If {{VideoFrameBufferInit/codedWidth}} = 0 or
         {{VideoFrameBufferInit/codedHeight}} = 0,return `false`.
-     2. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/width}} = 0
+    2. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/width}} = 0
         or {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/height}} =
         0, return `false`.
     3. If {{VideoFrameBufferInit/visibleRect}}.{{DOMRectInit/y}} +
@@ -3252,7 +3336,7 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
     3. Assign the following attributes from |otherFrame| to |frame|:
         {{VideoFrame/codedWidth}}, {{VideoFrame/codedHeight}},
         {{VideoFrame/visibleRect}}, {{VideoFrame/displayWidth}},
-        {{VideoFrame/displayHeight}}.
+        {{VideoFrame/displayHeight}}, {{VideoFrame/colorSpace}}.
     4. If {{VideoFrameInit/duration}} [=map/exists=] in |init|, assign it to
         |frame|.{{VideoFrame/duration}}. Otherwise, assign
         |otherFrame|.{{VideoFrame/duration}} to
@@ -3287,6 +3371,14 @@ A <dfn>computed plane layout</dfn> is a [=struct=] that consists of:
         |frame|.{{VideoFrame/duration}}.
     10. Assign `init`.{{VideoFrameInit/timestamp}} to
         |frame|.{{VideoFrame/timestamp}}.
+    9. If |resource| has a known {{VideoColorSpace}}, assign its value to
+        {{VideoFrame/[[color space]]}}.
+    10. Otherwise, assign {{VideoFrame/[[color space]]}} with the result of
+        running the [=VideoFrame/Pick Color Space=] algorithm, with
+        {{VideoFrame/[[format]]}}.
+
+        ISSUE: This implies frame.colorSpace would never be null. Should the
+            interface be changed to be not nullable?
 
 : <dfn>Clone VideoFrame</dfn> (with |frame|)
 :: 1. Let |clone| be a new {{VideoFrame}} initialized as follows:
@@ -3825,6 +3917,14 @@ is its own [=equivalent opaque format=].
 Video Color Space{#video-color-space}
 -------------------------------------
 
+### Rendering Color ### {#video-color-space-rendering-color}
+
+ISSUE: (rough placeholder)
+    ImageBitmaps produced by createImageBitmap(videoFrame) should be converted to a
+    color space supported by the canvas implementation unless
+    colorSpaceConversion == “none”. Similarly texImage2D() should convert to the
+    context’s color space.
+
 <xmp class='idl'>
 [Exposed=(Window,DedicatedWorker)]
 interface VideoColorSpace {
@@ -3835,8 +3935,7 @@ interface VideoColorSpace {
   readonly attribute VideoMatrixCoefficients? matrix;
   readonly attribute boolean? fullRange;
 
-  // Note: [Default] implementation would be correct.
-  VideoColorSpaceInit toJSON();
+  [Default] VideoColorSpaceInit toJSON();
 };
 
 dictionary VideoColorSpaceInit {
